fixed gap between about and work

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -75,7 +75,7 @@ footer h3 {
 .about {
   display: flex;
   font-size: 30px;
-  height: 300px;
+  height: 150px;
   justify-content: flex-start;
   width: 600px;
   padding: 0 0 0 0;
@@ -114,6 +114,13 @@ footer h3 {
     font-size: 40px;
     display:inline-block;
     border-right: 4px solid black;
+}
+
+.flex-row h3 {
+    font-size: 10px;
+    display: flex;
+    gap: 1px;
+    flex-wrap: wrap; ????
 }
 
 .resume {
